# kiikku_survivors

./: .gersemirc  .gitignore  CMakeLists.txt
cmake/: compile_flags.cmake  dependencies.cmake  tidy.cmake
src/: common.h  debug.c  debug.h  enemy.c  enemy.h  game.c  game.h  input.c  input.h  item.c  item.h  main.c  player.c  player.h  projectile.c  projectile.h  renderer.c  renderer.h  settings.c  settings.h  viewport.c  viewport.h
src/menus/: loading_screen.c  loading_screen.h  main_menu.c  main_menu.h
